[gd_scene load_steps=13 format=3 uid="uid://citwu45n5rnpk"]

[ext_resource type="PackedScene" uid="uid://drlrv6lbxea7t" path="res://player.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://unupul230njk" path="res://Data/Scripts/combat_manager.gd" id="1_1bvp3"]
[ext_resource type="Resource" uid="uid://bm23kjd3l1evn" path="res://Data/Attacks/Resources/headbutt.tres" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://dhfplumfoom0v" path="res://monster.tscn" id="2_h2yge"]
[ext_resource type="Resource" uid="uid://djj3gkxyeg7y6" path="res://Entities/Player/hero1.tres" id="3_7mycd"]
[ext_resource type="Texture2D" uid="uid://cpjm3itrrkjwa" path="res://bg.png" id="4_1bvp3"]
[ext_resource type="Resource" uid="uid://bytjcsx41j7hm" path="res://Entities/Enemies/Bat/bat.tres" id="4_lquwl"]

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "enemy_weak_screen_shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.118682, 0.0]
}

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "headbutt"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dummy"
}]
}

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "key_tests"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0],
"method": &"bullshit_test"
}, {
"args": [9],
"method": &"bullshit_test"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"enemy_weak_screen_shake": SubResource("Animation_1bvp3"),
&"headbutt": SubResource("Animation_272bh"),
&"key_tests": SubResource("Animation_7mycd")
}

[node name="Battle" type="Control" node_paths=PackedStringArray("target_selected", "current_actor")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1bvp3")
attack_selected = ExtResource("2_272bh")
target_selected = NodePath("Combatants/Monsters/monster")
current_actor = NodePath("Combatants/Players/player1")

[node name="turn_updater" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="combat_animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7mycd")
}

[node name="Spots" type="Node" parent="."]
unique_name_in_owner = true

[node name="1" type="TextureButton" parent="Spots"]
offset_left = 246.0
offset_top = 162.0
offset_right = 246.0
offset_bottom = 162.0

[node name="2" type="TextureButton" parent="Spots"]
offset_left = 431.0
offset_top = 142.0
offset_right = 431.0
offset_bottom = 142.0

[node name="3" type="TextureButton" parent="Spots"]
offset_left = 610.0
offset_top = 137.0
offset_right = 610.0
offset_bottom = 137.0

[node name="4" type="TextureButton" parent="Spots"]
offset_left = 789.0
offset_top = 138.0
offset_right = 789.0
offset_bottom = 138.0

[node name="5" type="TextureButton" parent="Spots"]
offset_left = 967.0
offset_top = 151.0
offset_right = 967.0
offset_bottom = 151.0

[node name="Combatants" type="Node" parent="."]

[node name="Players" type="Node" parent="Combatants"]
unique_name_in_owner = true

[node name="player1" parent="Combatants/Players" instance=ExtResource("1_0xm2m")]
character = ExtResource("3_7mycd")

[node name="Monsters" type="Node" parent="Combatants"]
unique_name_in_owner = true

[node name="monster" parent="Combatants/Monsters" groups=["combatant", "monster"] instance=ExtResource("2_h2yge")]
offset_left = 79.0
offset_top = 46.0
offset_right = 79.0
offset_bottom = 46.0
current_position = 1
character = ExtResource("4_lquwl")
ID = "Bat"

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_1bvp3")
expand_mode = 1

[node name="CombatLog" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 624.0
offset_top = 14.0
offset_right = 1132.0
offset_bottom = 190.0

[node name="CombatText" type="RichTextLabel" parent="CombatLog"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 287.0
offset_right = 449.0
offset_bottom = 492.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 2

[node name="player_UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="player_actions" type="PanelContainer" parent="player_UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 496.0
offset_right = 452.0
offset_bottom = 646.0

[node name="player_action_select" type="Control" parent="player_UI/player_actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="player_UI/player_actions/player_action_select"]
layout_mode = 2
offset_right = 446.0
offset_bottom = 154.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="player_attacks" type="GridContainer" parent="player_UI/player_actions/player_action_select/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="attack_button" type="Button" parent="player_UI/player_actions/player_action_select/MarginContainer/player_attacks"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "ATTACK"

[node name="spell_button" type="Button" parent="player_UI/player_actions/player_action_select/MarginContainer/player_attacks"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "SPELLS"

[node name="defend_button" type="Button" parent="player_UI/player_actions/player_action_select/MarginContainer/player_attacks"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "DEFEND"

[node name="items_button" type="Button" parent="player_UI/player_actions/player_action_select/MarginContainer/player_attacks"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "ITEMS"

[node name="player_attack_select" type="Control" parent="player_UI/player_actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="player_UI/player_actions/player_attack_select"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 60.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="player_attacks" type="GridContainer" parent="player_UI/player_actions/player_attack_select/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="player_items_select" type="Control" parent="player_UI/player_actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="player_UI/player_actions/player_items_select"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 60.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="player_items" type="GridContainer" parent="player_UI/player_actions/player_items_select/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="player_target_select" type="Control" parent="player_UI/player_actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="player_UI/player_actions/player_target_select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="targets" type="GridContainer" parent="player_UI/player_actions/player_target_select/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10

[node name="action_confirm" type="Panel" parent="player_UI/player_actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="accept_action" type="Button" parent="player_UI/player_actions/action_confirm"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.0
offset_top = 43.0
offset_right = 206.0
offset_bottom = 107.0
text = "Yes
"

[node name="refuse_action" type="Button" parent="player_UI/player_actions/action_confirm"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 43.0
offset_right = 429.0
offset_bottom = 110.0
text = "No
"

[node name="return" type="Button" parent="player_UI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 409.0
offset_top = 458.0
offset_right = 452.0
offset_bottom = 495.0
text = "<"

[node name="player_stats" type="Control" parent="player_UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="player_UI/player_stats"]
layout_mode = 0
offset_left = 454.0
offset_top = 496.0
offset_right = 1146.0
offset_bottom = 646.0

[connection signal="timeout" from="turn_updater" to="." method="_on_update_turns_timeout"]
